--- a/build.gradle
+++ b/build.gradle
@@ -31,12 +31,32 @@ ext {
     ]
 }
 
-//task instrument(type: JavaExec) {
-    //your instrumentation task steps here
-//}
+task annotate(type: JavaCompile, dependsOn: compileScala) << {
+
+    options.compilerArgs << '-proc:only -processor  net.java.sezpoz.impl.Indexer62 -verbose'
+
+        outputs.upToDateWhen { false }
+        sourceSets {
+            main {
+                java {
+                    'build/classes/main/'
+                }
+            }
+        }
+
+        println("[assemble] ${options.compilerArgs}")
+        println("[assemble] ${sourceSets.main.java}")
+}
+
+
+task run(type: JavaExec, dependsOn: compileScala) {
+    main = 'mypackage.Main'
+    classpath sourceSets.main.runtimeClasspath
+    classpath configurations.runtime
+}
 
 //compileScala.doLast {
-//    tasks.instrument.execute()
+//    tasks.annotate.execute()
 //}
 
 dependencies {
@@ -44,10 +64,5 @@ dependencies {
 
     runtime group: 'org.scala-lang', name: 'scala-library', version: "$versions.scala"
     compile group: 'org.scala-lang', name: 'scala-library', version: "$versions.scala"
-    //runtime group: 'org.scala-lang', name: 'scala-compiler', version: "$versions.scala"
-    //testCompile group: 'org.scalatest', name: 'scalatest_2.11', version: "$versions.scalatest"
-
-    // https://mvnrepository.com/artifact/com.google.guava/guava
-    //compile group: 'com.google.guava', name: 'guava', version: '19.0'
-    //testCompile group: 'junit', name: 'junit', version: '4.11'
 }
+
